--- a/Pagina1.html
+++ b/Pagina1.html
@@ -11,11 +11,11 @@
 <body>
    <header>
         <h1><img class="ImgLogo" src="Imagens/logoFinal.png" alt="Logo Nosso Solar"></h1>
-        <nav>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Cadastro</a></li>
-            <li><a href="#">Contato</a></li>
-        </nav>
+            <nav>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Cadastro</a></li>
+                <li><a href="#">Contato</a></li>
+            </nav>
    </header>
    <main>
         <section id="SaibaMais">
@@ -33,5 +33,6 @@
         <img src="Imagens/logoFinal.png" alt="Logo Nosso Solar">
         <p>&copy; Copyright Nosso Solar - 2022</p>
    </footer>
+   <script src="js.js"></script>
 </body>
 </html>
