--- a/Pagina1.html
+++ b/Pagina1.html
@@ -9,19 +9,23 @@
     <title>Nosso Solar</title>
 </head>
 <body>
-   <header>
-        <h1><img class="ImgLogo" src="Imagens/logoFinal.png" alt="Logo Nosso Solar"></h1>
-            <nav>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Cadastro</a></li>
-                <li><a href="#">Contato</a></li>
-            </nav>
-   </header>
-   <main>
+    <header>
+        <section class="topo">
+			<h1><img id="ImgTopo" src="Imagens/logoFinal.png" alt="Nosso Solar"></h1>
+			<nav>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Cadastre-se</a></li>
+				<li><a href="#">Duvidas</a></li>
+			</nav>
+		</section>
+    </header>   
+    <main>
         <section id="SaibaMais">
-            <h2>Saiba Mais</h2>
-            <p>A energia fotovoltaica é uma alternativa limpa e sustentável e entre suas vantagens, podemos citar a redução da poluição, a ausência de produção direta de gases do efeito estufa, a diminuição do desmatamento e também do uso de recursos naturais não renováveis.</p>
-            <img src="Imagens/EnergiasLimpas&Poluentes.png" alt="">
+            <article class="Saiba">
+                <h2>Saiba Mais</h2>
+                <p>A energia fotovoltaica é uma alternativa limpa e sustentável e entre suas vantagens, podemos citar a redução da poluição, a ausência de produção direta de gases do efeito estufa, a diminuição do desmatamento e também do uso de recursos naturais não renováveis.</p>
+            </article>
+            <img class="ImgSaibaMais" src="Imagens/EnergiasLimpas&Poluentes.png" alt="">
         </section>
         <section id="Objetivo">
             <h2>Objetivo!</h2>
@@ -30,7 +34,7 @@
         </section>
    </main>
    <footer>
-        <img src="Imagens/logoFinal.png" alt="Logo Nosso Solar">
+        <img class="LogoRodape" src="Imagens/logoFinal.png" alt="Logo Nosso Solar">
         <p>&copy; Copyright Nosso Solar - 2022</p>
    </footer>
    <script src="js.js"></script>
