--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosso Solar</title>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Mali:wght@200;400;500;700&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="/Nosso Solar/assets/css/estilo.css">
+    <link rel="stylesheet" href="assets/css/estilo.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
                     </ul>
                 </li>
                 <li><a href="#com_ven">Compra/Venda</a></li>
-                <li><a href="#">Cadastro</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
                 <li><a href="#simule">Simule Aqui</a></li>
                 <li><a href="#fale">Fale Conosco</a></li>
             </ul>
